fix: build issue

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@
 NIXPACKS_PATH = "autodialer & blogs(Task2 & Task3)"
 
 [phases.setup]
-nixPkgs = ["...", "libvips"]
+nixPkgs = ["...", "vips"]
 
 [phases.install]
 cmds = [
