--- a/autodialer & blogs(Task2 & Task3)/Gemfile
+++ b/autodialer & blogs(Task2 & Task3)/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
-ruby "3.0.2"
+ruby "3.1.4"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.1.6"
@@ -8,11 +8,12 @@ gem "rails", "~> 7.1.6"
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
 gem "sprockets-rails"
 
-# Use sqlite3 as the database for Active Record (development/test)
-gem "sqlite3", ">= 1.4", group: [:development, :test]
+# Use sqlite3 as the database for Active Record
+# Available in all environments for flexibility (Docker uses SQLite by default)
+gem "sqlite3", ">= 1.4"
 
-# Use PostgreSQL for production (Railway)
-gem "pg", "~> 1.5", group: :production
+# Use PostgreSQL for production when DATABASE_URL is provided (Railway, Heroku, etc.)
+gem "pg", "~> 1.5"
 
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
